--- a/index_list/css/booking_reservation_page.css
+++ b/index_list/css/booking_reservation_page.css
@@ -25,7 +25,8 @@
 
 .reservation_info,
 .reservation_person
-{
+{   
+    height: 200;
     background-color: #b5b4b477;
     border-radius: 5px;
     margin: 0 10px;
@@ -63,7 +64,6 @@
 
 .form_container_info select,
 .form_container_info input,
-.form_container_info textarea,
 .form_container_person input
 {
     width: 280px;
@@ -74,11 +74,6 @@
     text-align: center;
     border: none;
     border-radius: 5px;
-}
-
-.form_container_info textarea {
-    height: 100px;
-    text-align: left;
 }
 
 #reservation_info_demands {
@@ -160,15 +155,11 @@ input[type="submit"]:hover {
     }
     .form_container_info select,
     .form_container_info input,
-    .form_container_info textarea,
     .form_container_person input
     {
         width: 400px;
         height: 35px;
         font-size: 1.25rem;
-    }
-    .form_container_info textarea {
-        height: 120px;
     }
     .form_container_person form {
         width: 500px;
@@ -212,15 +203,11 @@ input[type="submit"]:hover {
     }
     .form_container_info select,
     .form_container_info input,
-    .form_container_info textarea,
     .form_container_person input
     {
         width: 350px;
         height: 30px;
         font-size: 1.2rem;
-    }
-    .form_container_info textarea {
-        height: 90px;
     }
     .form_container_person form {
         width: 480px;
@@ -263,15 +250,11 @@ input[type="submit"]:hover {
     }
     .form_container_info select,
     .form_container_info input,
-    .form_container_info textarea,
     .form_container_person input
     {
         font-size: 1.1rem;
         width: 360px;
     }
-    .form_container_info textarea {
-        height: 80px;
-    }    
     .form_container_person form {
         width: 100%;
         margin: 15px auto;
@@ -310,16 +293,12 @@ input[type="submit"]:hover {
     }
     .form_container_info select,
     .form_container_info input,
-    .form_container_info textarea,
     .form_container_person input
     {
         font-size: 1rem;
         width: 240px;
         
     }
-    .form_container_info textarea {
-        height: 60px;
-    }    
     .form_container_person form {
         width: 100%;
         margin: 10px auto;
@@ -342,3 +321,32 @@ input[type="submit"]:hover {
 
 /* RWD end */
 
+.chk_css {
+    width: 400px;
+}
+
+.chk_item {
+    width: 400px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.chk_item label{
+    font-size: 16px;
+}
+
+.form_container_info input[type="checkbox"] {
+    width: 45px;
+    height: 20px;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+    padding: 0 12px;
+}
+
+.column label {
+    text-align: left;
+}
