--- a/food-crossroads/src/css/member_register.css
+++ b/food-crossroads/src/css/member_register.css
@@ -20,6 +20,8 @@
     display: flex;
     justify-content: center; 
     margin-top: 40px;
+    padding-top: 10px;
+    padding-bottom: 15px;
 }
 
 .input_box {
