--- a/index_list/css/member.css
+++ b/index_list/css/member.css
@@ -210,7 +210,8 @@ td {
 
 .cancel_btn,
 .detail_btn,
-.comment_btn {
+.comment_btn,
+.together_btn {
   border-radius: 8px;
   border: none;
   padding: 5px 8px;
@@ -240,13 +241,19 @@ td {
 }
 
 .comment_btn {
-  margin-left: -80px;
+  margin-left: -120px;
   background-color: #8b1309;
   color: #fff;
 }
 
 .comment_btn:hover {
   background-color: #a30f01;
+}
+
+.together_btn {
+  margin-left: -270px;
+  background-color: #8b1309;
+  color: #fff;
 }
 
 /* .mobile_td{
