--- a/index_list/css/restaurant_self_pick_up.css
+++ b/index_list/css/restaurant_self_pick_up.css
@@ -1,26 +1,30 @@
 .test {
     display: none;
 }
-aside {
+
+#restaurant_self_pick_up_aside {
     background-color: #403C3C;
     width: 230px;
-    height: 85vh;
+    height: 90vh;
     position: fixed;
-    top: 10%;
+    top: 8%;
 }
 
-.panel-default{
-    /* border: 1px solid red; */
+#restaurant_self_pick_up_aside .panel-default{
     border-bottom: 1px solid white;
     padding: 5px;
     width: 100%;
 }
 
-.panel-title {
+#restaurant_self_pick_up_aside .default{
+    background-color: #8B1309;
+}
+
+#restaurant_self_pick_up_aside .panel-title {
     padding-top: 8px;
 }
 
-.panel-heading .panel-title a {
+#restaurant_self_pick_up_aside .panel-heading .panel-title a {
     font-weight: 600;
     color: white;
     text-decoration: none;
@@ -28,181 +32,176 @@ aside {
     width: 100%;
 }
 
-.little_title {
-    /* border: 1px solid red; */
+#restaurant_self_pick_up_aside .little_title {
     margin-left: -5px;
     margin-right: -6px;
     padding: 5px 0 5px 15px;
 }
 
-.little_title:hover {
+#restaurant_self_pick_up_aside .little_title:hover {
     background-color: #8B1309;
 }
 
-.panel .little_title a  {
+#restaurant_self_pick_up_aside .panel .little_title a  {
     text-decoration: none;
     color: white;
     font-weight: 600;
 }
 
-.sreach_form {
-    /* border: 1px solid red; */
-    padding: 0 10px 5px 10px;
-}
-
-.form_textbox {
-    margin-bottom: -6px;
-}
-
-.container{
+/* .container{
     height: 83vh;    
+} */
+
+#restaurant_self_pick_up .search_bar {
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
 
-.search-bar {
-    position: relative;
-    left: 35px;
-}
-.search-bar button {
-    height: 30px;
+#restaurant_self_pick_up .search_bar h3{
     font-weight: 600;
+    margin-right: 500px;
 }
 
-.search-bar button:hover {
-    background-color: rgb(165, 164, 164);
+#restaurant_self_pick_up .search_bar input[type=text]{
+    border: none;  
+    width: 90%;
 }
 
-.search-bar input {
-    width: 1000px;
+#restaurant_self_pick_up .search_bar input[type=text]:focus{
+    outline: none;
 }
 
-.container .order_table {
+#restaurant_self_pick_up .search_bar button {
+    height: 40px;
+    background-color: #FCC106;
+    border-radius: 5px;
+    padding: 2px 10px;
+}
+
+#restaurant_self_pick_up .search_bar button:hover {
+    background-color: #f0b802;
+}
+
+#restaurant_self_pick_up .search_bar_div{
+    border: 1px solid #999999;
+    border-radius: 5px;
+    padding: 5px;
+    width: 30%;
+    margin-right: 10px;
+}
+
+#restaurant_self_pick_up .container .order_table {
     position: absolute;
-    top: 120px;
+    top: 140px;
     left: 16%;
     width: 80%;
 }
 
-.member_info{
-    margin-top: 60px;
-}
-
-.member_contain{
-    padding-top: 20px;
-}
-
-.member_edit_btn{
-    margin-left: 200px;
-    border-radius: 5px;
-    margin-top: 30px;
-    font-family: Noto Sans TC;
-}
-
-.title_member_edit{
-    font-size: 35px;
-    font-weight: bold;
-    text-align: center;
-    font-family: Noto Sans TC;
-}
-
-.edit_info{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,30%);
-}
-
-label{
+#restaurant_self_pick_up label{
     margin-right: 20px;
 }
 
-.member_confirm_btn{
-    margin-left: 150px;
-    border-radius: 5px;
-    margin-top: 30px;
-    font-family: Noto Sans TC;
-}
-
-thead {
+#restaurant_self_pick_up thead {
     position: relative;
     right: 20px;
 }
 
-th{
+#restaurant_self_pick_up th{
     text-align: center;
     position: relative;
     left: 20px;
     letter-spacing: 5px;
 }
 
-td{
+#restaurant_self_pick_up td{
     text-align: center;
 }
 
-tbody .detail_btn {
-    border-radius: 8px;
+#restaurant_self_pick_up tbody input[type=checkbox]{
+    width: 16px;
+    height: 16px;
+    margin-left: 15px;
 }
 
-.detail_btn:hover {
-    background-color: gray;
+#restaurant_self_pick_up tbody .detail_btn,.cancel_btn {
+    border-radius: 5px;
+    border: none;
+    padding: 5px 8px;
+    transition: 0.3s;
 }
 
-.group_btn {
-    border-radius: 10px;
+#restaurant_self_pick_up .modal-footer .detail_btn,#restaurant_self_pick_up .modal-footer .cancel_btn {
+    border-radius: 5px;
+    border: none;
+    font-size: 18px;
+    padding: 10px 14px;
+    transition: 0.3s;
 }
 
-.group_btn:hover {
-    background-color: rgb(250, 83, 111);
+#restaurant_self_pick_up tbody .detail_btn,#restaurant_self_pick_up .modal-footer .detail_btn{
+    border: 2px solid #403C3C;
 }
 
-.comment_btn{
-    border-radius: 8px;
+#restaurant_self_pick_up .detail_btn:hover {
+    background-color: #524d4d;
+    color: #fff;
 }
 
-.cancel_modal_body{
+#restaurant_self_pick_up .modal-footer .detail_btn:hover{
+    background-color: #524d4d
+}
+
+#restaurant_self_pick_up .cancel_btn,#restaurant_self_pick_up .modal-footer .cancel_btn{
+    background-color: #8b1309;
+    color: #fff;
+}
+
+#restaurant_self_pick_up .cancel_btn:hover{
+    background-color: #a30f01;
+}
+
+#restaurant_self_pick_up .modal-footer .cancel_btn:hover{
+    background-color: #a30f01;
+}
+
+#restaurant_self_pick_up .cancel_modal_body{
     margin-top: 50px;
     margin-bottom: 50px;
     text-align: center;
     font-size: 28px;
-    font-family: Noto Sans TC;
 }
 
-.modal-title{
-    font-family: Noto Sans TC;
+#restaurant_self_pick_up .modal-title{
     font-size: 24px;
-    
-    
 }
-.detail_modal_body{
+
+#restaurant_self_pick_up .detail_modal_body{
     margin-top: 50px;
     margin-bottom: 50px;
     margin-left: 150px;
     font-size: 18px;
-    font-family: Noto Sans TC;
 }
 
-.rank_modal_body{
+#restaurant_self_pick_up .rank_modal_body{
     position: relative;
     margin-top: 100px;
     margin-bottom: 100px;
     margin-left: 150px;
-    font-family: Noto Sans TC;
 }
 
-.modal-footer{
-    font-family: Noto Sans TC;
-}
-
-.rank_modal_title{
+#restaurant_self_pick_up .rank_modal_title{
     position: absolute;
     font-size: 28px;
     left: -50px;
     top: -40px;
-
 }
-.modal-title {
+
+#restaurant_self_pick_up .modal-title {
     font-weight: bold;
 }
-.detail_modal_body {
+
+#restaurant_self_pick_up .detail_modal_body {
    font-size: 20px;
    letter-spacing: 2px;
    position: relative;
@@ -214,18 +213,7 @@ tbody .detail_btn {
 
 /* 超大型螢幕 */
 @media screen and (max-width:1200px) {
-    header a img {
-        width: 100%;
-        height: 50px;
-    }
-    .nav_icon a {
-        font-size: 19px;
-        margin-right: 10px;
-    }
-    .footer_link {
-        justify-content: center;
-    }
-    aside {
+    #restaurant_self_pick_up_aside {
         background-color: #403C3C;
         width: 150px;
         height: 82vh;
@@ -233,35 +221,27 @@ tbody .detail_btn {
         top: 12%;
     }
 
-    .panel-title {
+    #restaurant_self_pick_up_aside .panel-title {
         font-size: 20px;
         padding-top: 8px;
     }
 
-    .panel .little_title a  {
+    #restaurant_self_pick_up_aside .panel .little_title a  {
         text-decoration: none;
         color: white;
         font-size: 13px;
         font-weight: 600;
     }
-    .container{
+
+    /* .container{
         height: 80vh;    
-    }
+    } */
 
-    .sreach_form {
-    /* border: 1px solid red; */
-    padding: 0 0px 0px 10px;
-    }
-
-    .sreach_form .form_textbox {
-        margin-bottom: 0px;
-    }
-
-    .container .order_table {
+    #restaurant_self_pick_up .container .order_table {
        margin-top: -15px;
     }
 
-    th{
+    #restaurant_self_pick_up th{
         font-size: 10px;
         text-align: center;
         position: relative;
@@ -269,62 +249,49 @@ tbody .detail_btn {
         letter-spacing: 0px;
     }
     
-    td{
+    #restaurant_self_pick_up td{
         font-size: 10px;
         text-align: center;
     }
     
-    tbody .detail_btn {
+    #restaurant_self_pick_up tbody .detail_btn {
         border-radius: 8px;
     }
 
-    tbody .cancel_btn {
+    #restaurant_self_pick_up tbody .cancel_btn {
         margin-right: 100px;
     }
-    
-    .comment_btn{
-        border-radius: 8px;
-    }
-    
-    .cancel_modal_body{
+
+    #restaurant_self_pick_up .cancel_modal_body{
         margin-top: 50px;
         margin-bottom: 50px;
         text-align: center;
         font-size: 28px;
-        font-family: Noto Sans TC;
     }
     
-    .modal-title{
-        font-family: Noto Sans TC;
+    #restaurant_self_pick_up .modal-title{
         font-size: 24px; 
     }
-    .detail_modal_body{
-    
+
+    #restaurant_self_pick_up .detail_modal_body{
         margin-top: 50px;
         margin-bottom: 50px;
         margin-left: 150px;
         font-size: 18px;
-        font-family: Noto Sans TC;
     }
     
-    .rank_modal_body{
+    #restaurant_self_pick_up .rank_modal_body{
         position: relative;
         margin-top: 100px;
         margin-bottom: 100px;
         margin-left: 150px;
-        font-family: Noto Sans TC;
     }
     
-    .modal-footer{
-        font-family: Noto Sans TC;
-    }
-    
-    .rank_modal_title{
+    #restaurant_self_pick_up.rank_modal_title{
         position: absolute;
         font-size: 28px;
         left: -50px;
         top: -40px;
-    
     }
 }
 
@@ -332,14 +299,6 @@ tbody .detail_btn {
 /* 大型螢幕 */
 
 @media screen and (max-width:992px) {
-    header a img {
-        width: 100%;
-        height: 50px;
-    }
-    .nav_icon a {
-        font-size: 18px;
-        margin-right: 10px;
-    }
 
 }
 
@@ -347,49 +306,19 @@ tbody .detail_btn {
 /* 平板 */
 
 @media screen and (max-width:768px) {
-    header a img {
-        width: 100%;
-        height: 50px;
-    }
-    .nav_icon a {
-        /* font-size: 16px;
-        margin-right: 10px; */
-        display: none;
-    }
-    .rwd_icon {
-        display: block;
-    }
-    .footer_text {
-        line-height: 40px;
-        height: 50px;
-        font-size: 14px;
-    }
-    .footer_link {
-        font-size: 14px;
-    }
+
 }
 
 
 /* 手機 */
 
 @media screen and (max-width:576px) {
-    header a img {
-        width: 100%;
-        height: 50px;
-    }
-    /* .nav_icon a {
-        font-size: 14px;
-        margin-left: 0px;
-    } */
+
 }
 
 
 /* 小手機 */
 
 @media screen and (max-width:480px) {
-    .rwd_icon{
-        width: 50%;
-        display: flex;
-        flex-direction: row;
-    }
+
 }
