--- a/food-crossroads/src/css/restaurant_page.css
+++ b/food-crossroads/src/css/restaurant_page.css
@@ -154,12 +154,13 @@ div.flex1 {
     font-size: 1.4rem;
 }
 
-.shop_title .cuisine_name {
+.cuisine_name {
     border: none;
     border-radius: 15px;
     width: 120px;
     height: 50px;
     font-size: 24px;
+    color: black;
     background-color: #fff;
 }
 
