--- a/food-crossroads/src/css/booking_reservation_page.css
+++ b/food-crossroads/src/css/booking_reservation_page.css
@@ -26,7 +26,7 @@
 .reservation_info,
 .reservation_person
 {   
-    height: 200;
+    height: 460px;
     background-color: #b5b4b477;
     border-radius: 5px;
     margin: 0 10px;
@@ -49,14 +49,14 @@
     margin: 0 30px;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     align-content: center;
     /* background-color: lightyellow; */
 }
 
 .form_container_info > form > div {
     /* border: 2px solid black; */
-    font-size: 1.2rem;
+    height: 50px;
+    font-size: 1.15rem;
     font-weight: 500;
     text-align: center;
     justify-content: center;
@@ -90,19 +90,18 @@
 
 .form_container_person > form > div {
     /* border: 2px solid black; */
+    width: 80%;
+    margin: 20px 0 10px 90px;
     font-size: 1.25rem;
     font-weight: 500;
-    /* margin: 5px; */
-    /* padding: 5px; */
-    justify-content: center;
-    text-align: center;
+    justify-content: space-between;
 }
 
 input[type="submit"] {
     width: 200px;
     height: 40px;
-    margin-left: 200px;
-    margin-top: 90px;
+    margin-left: 680px;
+    margin-top: 50px;
     font-size: 18px;
     background-color: #8B1309;
     color: #fff;
@@ -113,6 +112,7 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
     background-color: #a30f01;
+    font-size: 20px;
 }
 
 /* ---------- body over ---------- */
