--- a/food-crossroads/src/css/restaurant_page.css
+++ b/food-crossroads/src/css/restaurant_page.css
@@ -206,8 +206,13 @@ div.flex1 {
 }
 
 .fa-plus-circle {
-    font-size: 1.8em;
+    font-size: 1.2rem;
     color: #8b1309;
+}
+
+.add_comment {
+    background-color: #fff;
+    border: none;
 }
 
 .service_box {
@@ -300,7 +305,7 @@ div.flex1 {
 }
 
 /* 置頂紐 */
-.ontop_btn {
+.on_top_btn {
     display: none;    
     width: 60px;     
     height: 60px;     
@@ -315,7 +320,7 @@ div.flex1 {
     transition: 0.3s;      
     }  
 
-.ontop_btn:hover {     
+.on_top_btn:hover {     
     background-color: grey;     
 }
 
@@ -411,4 +416,72 @@ div.flex1 {
 .modal_content_menu .container_menu img {
     width: 100%;
 }
+
+.modal_comment {
+    z-index: 3;
+    display: none;
+    padding-top: 130px;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal_content_comment {
+    border-radius: 5px;
+    margin: auto;
+    background-color: #fff;
+    position: relative;
+    padding: 10px;
+    outline: 0;
+    width: 600px;
+    height: 500px;
+}
+
+.container_comment {
+    height: 100%;
+    padding: 10px;
+}
+
+.container_comment > h1 {
+    text-align: center;
+}
+
+.container_comment > .write_div {
+    
+    text-align: center;
+    margin-top: 50px;
+}
+
+
+.comment_input {
+    width: 100%;
+    height: 120px;
+    border: 1px solid #403C3C;
+    border-radius: 5px;
+}
+
+.comment_stars {
+    font-size: 20px;
+}
+
+.add_comment_btn {
+    width: 100px;
+    height: 40px;
+    background-color: #8b1309;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    font-size: 1.25rem;
+}
+
+.add_comment_btn:hover {
+    background-color: #a30f01;
+    font-size: 1.35rem;
+}
+
 
