--- a/food-crossroads/src/css/member_register.css
+++ b/food-crossroads/src/css/member_register.css
@@ -1,21 +1,21 @@
-#member_register .container {
+#MemberRegister .container {
   margin-top: 10px;
   padding: 50px;
 }
 
-.register_title {
+#MemberRegister .register_title {
   display: flex;
   justify-content: center;
   margin-bottom: 30px;
   margin-right: 30px;
 }
 
-.register_title_text {
+#MemberRegister .register_title_text {
   font-size: 30px;
   font-weight: 600;
 }
 
-.register_form {
+#MemberRegister .register_form {
   width: 700px;
   border: 1px solid black;
   background-color: white;
@@ -32,40 +32,40 @@
   margin-left: 20px;
 }
 
-.form_text {
+#MemberRegister .form_text {
   font-size: 20px;
   font-weight: 600;
   letter-spacing: 15px;
 }
 
-.password_confirm {
+#MemberRegister .password_confirm {
   position: relative;
   right: 69px;
 }
 
-.btn_div {
+#MemberRegister .btn_div {
   display: flex;
   justify-content: center;
   margin-right: 80px;
 }
 
-.register_btn {
+#MemberRegister .register_btn {
   color: white;
   background-color: #8b1309;
   border: none;
   border-radius: 5px;
-  padding: 10px;
+  padding: 20px;
   width: 150px;
-  margin-top: 50px;
+  margin-top: 30px;
   transition: 0.3s;
   font-weight: 600;
 }
 
-.register_btn:hover {
+#MemberRegister .register_btn:hover {
   background-color: #f14030;
 }
 
-.reportSpan {
+#MemberRegister .reportSpan {
   width: 140px;
   text-align: center;
   margin-top: 140px;
