--- a/food-crossroads/src/css/booking_check_page.css
+++ b/food-crossroads/src/css/booking_check_page.css
@@ -10,13 +10,13 @@
 /* ---------- body start ---------- */
 
 
-.breadcrumb .breadcrumb-item a,.active{
+#booking_check_page .breadcrumb .breadcrumb-item a,#booking_check_page .active{
     font-size: 18px;
     font-weight: bolder;
     text-decoration: none;
 }
 
-.check_container {
+#booking_check_page .check_container {
     width: 880px;
     background-color: #b5b4b477;
     display: flex;
@@ -27,7 +27,7 @@
     /* border: 2px solid red; */
 }
 
-.check_form_title {
+#booking_check_page .check_form_title {
     width: 100%;
     font-size: 36px;
     color: black;
@@ -35,7 +35,7 @@
     /* border: 4px solid yellowgreen; */
 }
 
-.form_container_check_wrapper {
+#booking_check_page .form_container_check_wrapper {
     /* border: 2px solid darkblue; */
     width: 300px;
     height: 280px;
@@ -48,7 +48,7 @@
     align-items: center;
 }
 
-.btn_container_check {
+#booking_check_page .btn_container_check {
     display: flex;
     flex-direction: row;
     padding: 10px 10px;
@@ -56,8 +56,8 @@
     /* border: 2px solid black; */
 }
 
-.check_btn_back,
-.check_btn_confirm
+#booking_check_page .check_btn_back,
+#booking_check_page .check_btn_confirm
 {
     width: 200px;
     height: 40px;
@@ -71,30 +71,19 @@
     transition: 0.3s;
 }
 
-.check_btn_confirm:hover{
+#booking_check_page .check_btn_confirm:hover{
     background-color: #a30f01;
 }
 
-.check_btn_back{
+#booking_check_page .check_btn_back{
     background-color: #403C3C;
 }
 
-.check_btn_back:hover{
+#booking_check_page .check_btn_back:hover{
     background-color: #524d4d;
 }
 
 /* ---------- body over ---------- */
-
-
-/* ---------- footer_page start ---------- */
-
-.footer_page {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
-
-/* ---------- footer_page over ---------- */
 
 /* RWD start */
 
