--- a/food-crossroads/src/css/booking_finish_page.css
+++ b/food-crossroads/src/css/booking_finish_page.css
@@ -10,13 +10,13 @@
 /* ---------- body start ---------- */
 
 
-.breadcrumb .breadcrumb-item a,.active{
+#booking_finish_page .breadcrumb .breadcrumb-item a,#booking_finish_page .active{
     font-size: 18px;
     font-weight: bolder;
     text-decoration: none;
 }
 
-.finish_container {
+#booking_finish_page .finish_container {
     width: 880px;
     background-color: #b5b4b477;
     display: flex;
@@ -27,7 +27,7 @@
     /* border: 2px solid red; */
 }
 
-.finish_form_title
+#booking_finish_page .finish_form_title
 {
     width: 100%;
     font-size: 36px;
@@ -36,7 +36,7 @@
     /* border: 4px solid yellowgreen; */
 }
 
-.finish_form_show {
+#booking_finish_page .finish_form_show {
     /* border: 6px dashed orchid; */
     text-align: center;
     font-size: 24px;
@@ -44,7 +44,7 @@
     margin: 10px auto;
 }
 
-.form_container_finish_wrapper {
+#booking_finish_page .form_container_finish_wrapper {
     /* border: 2px solid darkblue; */
     width: 300px;
     height: 280px;
@@ -57,7 +57,7 @@
     align-items: center;
 }
 
-.btn_container_finish {
+#booking_finish_page .btn_container_finish {
     display: flex;
     flex-direction: row;
     padding: 10px 10px;
@@ -65,9 +65,9 @@
     /* border: 2px solid black; */
 }
 
-.finish_btn_booking_manage,
-.finish_btn_to_restaurant_page,
-.finish_btn_back_to_index
+#booking_finish_page .finish_btn_booking_manage,
+#booking_finish_page .finish_btn_to_restaurant_page,
+#booking_finish_page .finish_btn_back_to_index
 {
     width: 200px;
     height: 40px;
@@ -79,9 +79,9 @@
     margin: 0 10px;
 }
 
-.finish_btn_booking_manage:hover,
-.finish_btn_to_restaurant_page:hover,
-.finish_btn_back_to_index:hover
+#booking_finish_page .finish_btn_booking_manage:hover,
+#booking_finish_page .finish_btn_to_restaurant_page:hover,
+#booking_finish_page .finish_btn_back_to_index:hover
 {
     background-color: #424141;
     font-size: 22px;
@@ -90,14 +90,3 @@
 
 
 /* ---------- body over ---------- */
-
-
-/* ---------- footer_page start ---------- */
-
-.footer_page {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
-
-/* ---------- footer_page over ---------- */
