--- a/food-crossroads/src/css/style.css
+++ b/food-crossroads/src/css/style.css
@@ -10,6 +10,11 @@ li {
   list-style-type: none;
 }
 
+/* a{
+ text-decoration: none !important;
+ color: #403c3c !important;
+} */
+
 button {
   border: none;
 }
@@ -32,12 +37,12 @@ input[type="radio"] {
   z-index: 999;
 }
 
-header .navbar {
+.header_page .navbar {
   height: 12%;
   width: 100%;
 }
 
-header a img {
+.header_page a img {
   width: 100%;
   height: 60px;
 }
@@ -52,6 +57,7 @@ header a img {
 }
 
 .nav_icon a {
+  text-decoration: none;
   margin-left: 30px;
   position: relative;
 }
